# musclecalc

./: Cargo.toml  NOTICE  README.md  snapcraft.yaml
src/: calc.rs  main.rs  menu.rs
