[package]
name = "musclecalc"
version = "0.2.0"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "command line fitness tools: estimate the one repetition maximum (1RM)"
readme = "README.md"
repository = "https://github.com/piotrbajdek/musclecalc"
license = "Apache-2.0"
keywords = ["bodybuilding", "calculator", "fitness", "gym", "sport"]
categories = ["command-line-utilities", "mathematics"]

[profile.release]
opt-level = "z"
codegen-units = 1
